# mike-demo

./: README.md  latest  mkdocs.yml  pyproject.toml  versions.json
.github/actions/install-repository/: action.yml
.github/workflows/: ci.yml
0.1.0/: 404.html  index.html
0.3.0/: 404.html
0.3.0/search/: search_index.json
0.3.0/test_page1/: index.html
docs/: test_page1.md
src/mike_demo/: demo_file.py
test_github_actions/: index.html
tests/unit-tests/: test_demo_file.py
