[tool.poetry]
name = "mike-demo"
version = "0.1.0"
description = "Demo repository to setup mike"
authors = ["Hendrik Scherner"]
readme = "README.md"
packages = [ {include = "mike_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mike = "^2.0.0"
mkdocs-material = "^9.5.2"
pandas = "^2.1.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
